--- a/style.css
+++ b/style.css
@@ -85,10 +85,13 @@ body {
   background-color: white;
   flex: 1;
   padding-left: 3vw;
+  box-shadow: 4px 4px 10px grey;
+  display: block;
 }
 
 #bottom-div {
   padding-left: 3vw;
+  box-shadow: 0px 0px 15px grey inset;
 }
 
 #middle-div h1 {
